import {
	fireEvent,
	render,
	screen,
	waitFor,
} from "@testing-library/react-native";
import React, { type ReactElement } from "react";
import { type ColorSchemeName, Linking } from "react-native";
import getStyles from "../../theme/styles";
import type { MarkedStyles } from "../../theme/types";
import Markdown from "../Markdown";
import Renderer from "../Renderer";

jest.mock("react-native/Libraries/Linking/Linking", () => ({
	openURL: jest.fn(() => Promise.resolve("mockResolve")),
}));

const renderer = new Renderer();
const userStyles: MarkedStyles = {
	text: {
		fontSize: 24,
	},
	list: {
		padding: 24,
	},
};

describe("Renderer", () => {
	const themes: ColorSchemeName[] = ["light", "dark"];
	for (const theme of themes) {
		const styles = getStyles(userStyles, theme);
		describe(`${theme} theme`, () => {
			describe("Text Nodes", () => {
				it("returns a Text node", () => {
					const TextNode = renderer.text("Hello world", styles.text);

					const r = render(TextNode as ReactElement);
					expect(screen.queryByText("Hello world")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});

				it("returns a wrapped Text node", () => {
					const TextNodeChild = renderer.text("Hello world", {});
					const TextNode = renderer.text([TextNodeChild], styles.text);
					const r = render(TextNode as ReactElement);
					expect(screen.queryByText("Hello world")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});

				it("returns a wrapped Text node with styles", () => {
					const TextNodeChild = renderer.text("Hello world", styles.text);
					const TextNode = renderer.text([TextNodeChild], styles.text);
					const r = render(TextNode as ReactElement);
					expect(screen.queryByText("Hello world")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
			});
			describe("Link Nodes", () => {
				it("returns a Text Link node", () => {
					const LinkNode = renderer.link(
						"Link",
						"https://example.com",
						styles.link,
					);
					const r = render(LinkNode as ReactElement);
					expect(screen.queryByText("Link")).toBeTruthy();
					const link = screen.queryByText("Link");
					if (link) {
						fireEvent.press(link);
					}
					expect(Linking.openURL).toHaveBeenCalled();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
			});
			describe("getImageLinkNode", () => {
				it("returns a Image Link node", async () => {
					const LinkNode = renderer.linkImage(
						"https://example.com",
						"https://dummyimage.com/100x100/fff/aaa",
						"Hello world",
					);
					await waitFor(() => {
						const tree = render(LinkNode as ReactElement).toJSON();
						expect(tree).toMatchSnapshot();
					});
				});
			});
			describe("View Nodes", () => {
				it("returns a paragraph View node", () => {
					const TextNode = renderer.text("Hello world", styles.text);
					const LinkNode = renderer.link(
						"Link",
						"https://example.com",
						styles.link,
					);
					const ViewNode = renderer.paragraph(
						[TextNode, LinkNode],
						styles.paragraph,
					);

					const r = render(ViewNode as ReactElement);
					expect(screen.queryByText("Hello world")).toBeTruthy();
					expect(screen.queryByText("Link")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});

				it("returns a hr View node", () => {
					const ViewNode = renderer.hr(styles.hr);
					const r = render(ViewNode as ReactElement);
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
			});
			describe("Table Nodes", () => {
				it("returns a Table", () => {
					const TextNode1 = renderer.text("Hello world 1");
					const TextNode2 = renderer.text("Hello world 2", styles.strong);
					const TextNode3 = renderer.text("Hello world 3", styles.em);
					const TextNode4 = renderer.text("Hello world 4", styles.text);
					const TextNode5 = renderer.text("Hello world 5", styles.link);
					const headers = [[TextNode1], [TextNode2]];
					const rows = [[[TextNode3]], [[TextNode4, TextNode5]]];
					const Table = renderer.table(
						headers,
						rows,
						styles.table,
						styles.tableRow,
						styles.tableCell,
					);
					const r = render(Table as ReactElement);
					expect(screen.queryByText("Hello world 1")).toBeTruthy();
					expect(screen.queryByText("Hello world 2")).toBeTruthy();
					expect(screen.queryByText("Hello world 3")).toBeTruthy();
					expect(screen.queryByText("Hello world 4")).toBeTruthy();
					expect(screen.queryByText("Hello world 5")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
				it("returns a Table without styles", () => {
					const TextNode1 = renderer.text("Hello world 1");
					const TextNode2 = renderer.text("Hello world 2", styles.strong);
					const TextNode3 = renderer.text("Hello world 3", styles.em);
					const TextNode4 = renderer.text("Hello world 4", styles.text);
					const TextNode5 = renderer.text("Hello world 5", styles.link);
					const headers = [[TextNode1], [TextNode2]];
					const rows = [[[TextNode3]], [[TextNode4, TextNode5]]];
					const Table = renderer.table(headers, rows);
					const r = render(Table as ReactElement);
					expect(screen.queryByText("Hello world 1")).toBeTruthy();
					expect(screen.queryByText("Hello world 2")).toBeTruthy();
					expect(screen.queryByText("Hello world 3")).toBeTruthy();
					expect(screen.queryByText("Hello world 4")).toBeTruthy();
					expect(screen.queryByText("Hello world 5")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
			});
			describe("getCodeBlockNode", () => {
				it("returns a Code block (horizontal ScrollView)", () => {
					const CodeBlock = renderer.code(
						"print('hello')",
						"",
						styles.code,
						styles.em,
					);
					const r = render(CodeBlock as ReactElement);
					expect(screen.queryByText("print('hello')")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
			});
			describe("getBlockquoteNode", () => {
				it("returns a Blockquote", () => {
					const TextNode = renderer.text("Hello world", styles.text);
					const LinkNode = renderer.link(
						"Link",
						"https://example.com",
						styles.link,
					);
					const Blockquote = renderer.blockquote(
						[TextNode, LinkNode],
						styles.blockquote,
					);

					const r = render(Blockquote as ReactElement);
					expect(screen.queryByText("Hello world")).toBeTruthy();
					expect(screen.queryByText("Link")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
			});
			describe("getImageNode", () => {
				it("returns a Image", async () => {
					const ImageNode = renderer.image(
						"https://picsum.photos/100/100",
						"Hello world",
					);
					await waitFor(() => {
						const tree = render(ImageNode as ReactElement).toJSON();
						expect(tree).toMatchSnapshot();
					});
				});
			});
			describe("getListNode", () => {
				it("returns Ordered List", () => {
					const TextNode1 = renderer.text("Hello world 1", styles.li);
					const TextNode2 = renderer.text("Hello world 2", styles.li);
					const TextNode3 = renderer.text("Hello world 3", styles.li);
					const OL = renderer.list(
						true,
						[TextNode1, TextNode2, TextNode3],
						styles.list,
						styles.li,
					);
					const r = render(OL as ReactElement);
					expect(screen.queryByText("Hello world 1")).toBeTruthy();
					expect(screen.queryByText("Hello world 2")).toBeTruthy();
					expect(screen.queryByText("Hello world 3")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
				it("returns Un-Ordered List", () => {
					const TextNode1 = renderer.text("Hello world 1", styles.li);
					const TextNode2 = renderer.text("Hello world 2", styles.li);
					const TextNode3 = renderer.text("Hello world 3", styles.li);
					const OL = renderer.list(
						false,
						[TextNode1, TextNode2, TextNode3],
						styles.list,
						styles.li,
					);
					const r = render(OL as ReactElement);
					expect(screen.queryByText("Hello world 1")).toBeTruthy();
					expect(screen.queryByText("Hello world 2")).toBeTruthy();
					expect(screen.queryByText("Hello world 3")).toBeTruthy();
					const tree = r.toJSON();
					expect(tree).toMatchSnapshot();
				});
			});
		});
	}
});

describe("code and codespan styles #873", () => {
	it("code block uses codeText style", () => {
		const r = render(
			<Markdown
				value={"```\nhello\n```"}
				styles={{ codeText: { fontFamily: "Menlo" } }}
			/>,
		);
		expect(r.toJSON()).toMatchSnapshot();
	});

	it("code block with all TextStyle props via codeText", () => {
		const r = render(
			<Markdown
				value={"```\ncode\n```"}
				styles={{
					codeText: {
						fontFamily: "Menlo",
						fontSize: 14,
						color: "#ff0000",
						fontWeight: "700",
					},
				}}
			/>,
		);
		expect(r.toJSON()).toMatchSnapshot();
	});

	it("code block uses codeText instead of em (not italic)", () => {
		const r = render(<Markdown value={"```\ncode\n```"} />);
		expect(r.toJSON()).toMatchSnapshot();
	});

	it("code container ViewStyle and codeText TextStyle", () => {
		const styles = getStyles(
			{
				code: { padding: 10, backgroundColor: "#fff" },
				codeText: { fontFamily: "Menlo" },
			},
			"light",
		);
		expect(styles.code?.padding).toBe(10);
		expect(styles.codeText?.fontFamily).toBe("Menlo");
	});

	it("codespan preserves style inside strong", () => {
		const r = render(
			<Markdown
				value={"**some `code` inside**"}
				styles={{
					codespan: { fontFamily: "Menlo" },
					strong: { fontFamily: "Helvetica-Bold" } as never,
				}}
			/>,
		);
		expect(r.toJSON()).toMatchSnapshot();
	});

	it("codespan preserves style inside em", () => {
		const r = render(
			<Markdown
				value={"*some `code` inside*"}
				styles={{
					codespan: { fontFamily: "Menlo" },
					em: { fontFamily: "Helvetica-Oblique" } as never,
				}}
			/>,
		);
		expect(r.toJSON()).toMatchSnapshot();
	});

	it("codespan with all TextStyle props", () => {
		const r = render(
			<Markdown
				value={"Use `code` here"}
				styles={{
					codespan: {
						fontFamily: "Menlo",
						fontSize: 14,
						color: "#ff0000",
						fontWeight: "700",
					},
				}}
			/>,
		);
		expect(r.toJSON()).toMatchSnapshot();
	});
});
